@@ -382,6 +382,9 @@
             <setting name="LogWindowAutoScroll" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="FloatChildWindows" serializeAs="String">
+                <value>True</value>
+            </setting>
         </ProcessHacker.Properties.Settings>
     </userSettings>
 </configuration>
